2012-03-28 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Add view list hook
	* Use pagebrowse extension to generate list pagination if configuration actived

2012-03-23 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Version changed to 1.0.4

2012-03-23 Tsi YANG  <tsi@in-cite.net>
	* Documentation: Added stats API

2012-03-23 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Fix: update autoload

2012-03-22 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Version changed to 1.0.3
	* Depends typo3 4.3 (scheduler)
	* Fix: add function to control piVars data format 
	* Fix: add forgotten htmlspecialchars
	* Fix: Move "screenshot" text to locallang
	* Fix: add "pi_RTEcssText" function for respect htmlarea format (description field)
	* Fix: Platforms fiels not save in front-end forms

2012-03-22 Tsi YANG  <tsi@in-cite.net>
	* Feature: Added scheduler task for statistics

2011-06-20 In Cité Solution  <technique@in-cite.net>

	* initial code generated with kickstarter